Start using CoreDNS for Consul and resolve between services using Service Mesh Connect

--- a/kubernetes/configmaps/graphql-stitched.yaml
+++ b/kubernetes/configmaps/graphql-stitched.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: graphql-stitched
-  # namespace: ambassador
   labels:
     service: graphql-stitched
 data:
   STITCHED_PORT: "10000"
-  SUBGRAPH_URL: "http://graph-node:8000/subgraphs/name/niftier/composable-contract"
-  TEXTILE_URL: "http://graphql-textile:9000/"
-  SUBGRAPH_RESOURCE: "tcp:graph-node:8000"
-  TEXTILE_RESOURCE: "tcp:graphql-textile:9000"
+  SUBGRAPH_URL: "http://localhost:8000/subgraphs/name/niftier/composable-contract/graphql"
+  TEXTILE_URL: "http://localhost:9000/graphql"
+  SUBGRAPH_RESOURCE: "tcp:localhost:8000"
+  TEXTILE_RESOURCE: "tcp:localhost:9000"
