--- a/kubernetes/deployments/ceramic-node.yaml
+++ b/kubernetes/deployments/ceramic-node.yaml
@@ -1,8 +1,14 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: ceramic-node
+
+--- 
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ceramic-node
-  namespace: ambassador
   labels:
     service: ceramic-node
 spec:
@@ -17,6 +23,7 @@ spec:
       labels:
         service: ceramic-node
     spec:
+      serviceAccountName: ceramic-node
       containers:
         - command:
             - docker-entrypoint.sh
@@ -25,7 +32,6 @@ spec:
           name: ceramic-node
           ports:
             - containerPort: 7007
-          resources: {}
           volumeMounts:
             - mountPath: /root/.ceramic
               name: ceramic-node
@@ -35,4 +41,3 @@ spec:
         - name: ceramic-node
           persistentVolumeClaim:
             claimName: ceramic-node
-status: {}
