--- a/kubernetes/mappings/graph-node-consul.yaml
+++ b/kubernetes/mappings/graph-node-consul.yaml
@@ -1,28 +1,13 @@
 apiVersion: getambassador.io/v2
 kind: Mapping
 metadata:
-  name: graph-node
+  name: subgraph-node
   # namespace: ambassador
 spec:
   prefix: /api/subgraph/
-  # rewrite: /subgraphs/name/niftier/composable-contract/graphql
-  service: graph-node-sidecar-proxy
+  # rewrite: /api/subgraph/subgraphs/name/niftier/composable-contract
+  service: subgraph-node-sidecar-proxy
   resolver: consul-dc1
   tls: ambassador-consul
   load_balancer:  # underscored in their docs
     policy: round_robin
-
-
-# apiVersion: getambassador.io/v2
-# kind: Mapping
-# metadata:
-#   name: graphql-textile
-#   namespace: ambassador
-# spec:
-#   prefix: /api/textile/
-#   rewrite: /api/textile/graphql
-#   service: graphql-textile-sidecar-proxy
-#   resolver: consul-dc1
-#   tls: ambassador-consul
-#   load_balancer:  # underscored in their docs
-#     policy: round_robin
