--- a/kubernetes/services/subgraph-node.yaml
+++ b/kubernetes/services/subgraph-node.yaml
@@ -1,33 +1,30 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: graph-node
-  namespace: ambassador
+  name: subgraph-node
+  labels:
+    service: subgraph-node
   annotations:
     a8r.io/owner: adairrr
     a8r.io/description: "A service that encapsulates a graph node"
     a8r.io/repository: "https://github.com/adairrr/niftier/tree/develop/packages/subgraph"
     a8r.io/documentation: "https://github.com/adairrr/niftier/blob/develop/packages/subgraph/README.md"
-  labels:
-    service: graph-node
 spec:
   ports:
-    - name: graphql-server
+    - name: subgraph-graphql-endpoint
       port: 8000
       targetPort: 8000
-    - name: subscription-server
+    - name: subgraph-subscription-endpoint
       port: 8001
       targetPort: 8001
-    - name: json-rpc-server
+    - name: json-subgraph-rpc-endpoint
       port: 8020
       targetPort: 8020
-    - name: index-node-server
+    - name: index-subgraph-node-endpoint
       port: 8030
       targetPort: 8030
-    - name: metrics-server
+    - name: subgraph-metrics-endpoint
       port: 8040
       targetPort: 8040
   selector:
     service: graph-node
-status:
-  loadBalancer: {}
