--- a/kubernetes/admin/ambassador/aes.yaml
+++ b/kubernetes/admin/ambassador/aes.yaml
@@ -13,7 +13,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ambassador
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 ---
@@ -30,7 +30,8 @@ roleRef:
   name: ambassador
 subjects:
 - name: ambassador
-  namespace: ambassador
+  # namespace: ambassador
+  namespace: default
   kind: ServiceAccount
 ---
 # Source: ambassador/templates/projects-rbac.yaml
@@ -70,7 +71,8 @@ roleRef:
   name: ambassador-projects
 subjects:
 - name: ambassador
-  namespace: ambassador
+  # namespace: ambassador
+  namespace: default
   kind: ServiceAccount
 ---
 # Source: ambassador/templates/aes-redis.yaml
@@ -78,7 +80,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ambassador-redis
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
   annotations:
@@ -104,7 +106,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ambassador-redis
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
   annotations: {}
@@ -130,10 +132,11 @@ apiVersion: getambassador.io/v2
 kind: RateLimitService
 metadata:
   name: ambassador-edge-stack-ratelimit
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 spec:
+  # service: 127.0.0.1:8501
   service: 127.0.0.1:8500
 ---
 # Source: ambassador/templates/aes-authservice.yaml
@@ -141,11 +144,12 @@ apiVersion: getambassador.io/v2
 kind: AuthService
 metadata:
   name: ambassador-edge-stack-auth
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 spec:
   proto: grpc
+  # auth_service: 127.0.0.1:8501
   auth_service: 127.0.0.1:8500
   allow_request_body: false
   status_on_error:
@@ -156,7 +160,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ambassador-edge-stack
-  namespace: ambassador
+  # namespace: ambassador
 type: Opaque
 data:
   license-key: ''
@@ -168,12 +172,13 @@ kind: Mapping
 metadata:
   # This Mapping name is referenced by convention, it's important to leave as-is.
   name: ambassador-devportal
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 spec:
   prefix: /docs/
   rewrite: /docs/
+  # service: 127.0.0.1:8501
   service: 127.0.0.1:8500
 ---
 # Source: ambassador/templates/aes-internal.yaml
@@ -181,7 +186,7 @@ apiVersion: getambassador.io/v2
 kind: Mapping
 metadata:
   name: ambassador-devportal-assets
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 spec:
@@ -190,6 +195,7 @@ spec:
   regex_rewrite:
     pattern: /documentation/(.*)
     substitution: /docs/\1
+  # service: 127.0.0.1:8501
   service: 127.0.0.1:8500
   add_response_headers:
     cache-control:
@@ -202,12 +208,13 @@ kind: Mapping
 metadata:
   # This Mapping name is referenced by convention, it's important to leave as-is.
   name: ambassador-devportal-api
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 spec:
   prefix: /openapi/
   rewrite: ''
+  # service: 127.0.0.1:8501
   service: 127.0.0.1:8500
 ---
 # Source: ambassador/templates/service.yaml
@@ -215,7 +222,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ambassador
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     app.kubernetes.io/component: ambassador-service
     product: aes
@@ -229,7 +236,7 @@ metadata:
     a8r.io/chat: http://a8r.io/Slack
     a8r.io/bugs: https://github.com/datawire/ambassador/issues
     a8r.io/support: https://www.getambassador.io/about-us/support/
-    a8r.io/dependencies: ambassador-redis.ambassador
+    a8r.io/dependencies: ambassador-redis.default
 spec:
   type: LoadBalancer
   ports:
@@ -247,7 +254,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ambassador-admin
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     # Hard-coded label for Prometheus Operator ServiceMonitor
     service: ambassador-admin
@@ -370,7 +377,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ambassador
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 spec:
@@ -426,12 +433,19 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        # CONSUL CONFIG
+        - name: _CONSUL_PORT
+          value: "8501"
+        - name: CONSUL_HTTP_SSL
+          value: "true"
+        - name: CONSUL_HTTP_SSL_VERIFY
+          value: "false"
         - name: AMBASSADOR_DRAIN_TIME
           value: '600'
         - name: AMBASSADOR_INTERNAL_URL
           value: https://127.0.0.1:8443
         - name: AMBASSADOR_URL
-          value: https://ambassador.ambassador.svc.cluster.local
+          value: https://ambassador.default.svc.cluster.local
         - name: POLL_EVERY_SECS
           value: '60'
         securityContext:
@@ -482,7 +496,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ambassador-agent
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 ---
@@ -500,7 +514,8 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ambassador-agent
-  namespace: ambassador
+  namespace: default
+  # namespace: ambassador
 ---
 # Source: ambassador/templates/ambassador-agent.yaml
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -559,7 +574,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: ambassador-agent-config
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 rules:
@@ -572,7 +587,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: ambassador-agent-config
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     product: aes
 roleRef:
@@ -582,14 +597,14 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: ambassador-agent
-  namespace: ambassador
+  # namespace: ambassador
 ---
 # Source: ambassador/templates/ambassador-agent.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ambassador-agent
-  namespace: ambassador
+  # namespace: ambassador
   labels:
     app.kubernetes.io/name: ambassador-agent
     app.kubernetes.io/instance: ambassador
@@ -621,4 +636,4 @@ spec:
         - name: RPC_CONNECTION_ADDRESS
           value: https://app.getambassador.io/
         - name: AES_SNAPSHOT_URL
-          value: http://ambassador-admin.ambassador:8005/snapshot-external
+          value: http://ambassador-admin.default:8005/snapshot-external
