--- a/kubernetes/configmaps/subgraph-postgres.yaml
+++ b/kubernetes/configmaps/subgraph-postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: subgraph-postgres
-  # namespace: ambassador
+  # # namespace: ambassador
   labels:
     service: subgraph-postgres
 data:
