--- a/kubernetes/testing/qotm-mtls-mapping.yaml
+++ b/kubernetes/testing/qotm-mtls-mapping.yaml
@@ -1,11 +1,11 @@
+---
 apiVersion: getambassador.io/v2
 kind: Mapping
 metadata:
-  name: graphql-stitched
+  name: consul-qotm-mapping-tls
 spec:
-  prefix: /api/stitched/
-  rewrite: /graphql
-  service: graphql-stitched-sidecar-proxy
+  prefix: /qotm-consul-tls/
+  service: qotm-sidecar-proxy
   resolver: consul-dc1
   tls: ambassador-consul
   load_balancer:
