Add a prometheus exporter plugin to the textile server

--- a/packages/textile-server/Dockerfile
+++ b/packages/textile-server/Dockerfile
@@ -23,7 +23,7 @@ COPY package.json yarn.lock $APP/
 
 # How can we do this in offline mode?
 # RUN yarn --pure-lockfile --link-duplicates --cache-folder ./yarn-offline-mirror
-RUN yarn --pure-lockfile --link-duplicates
+RUN yarn install
 
 COPY . $APP/
 
