--- a/packages/textile-server/package.json
+++ b/packages/textile-server/package.json
@@ -16,13 +16,17 @@
     "copy-schema": "cp ./src/graphql/schema.graphql ./dist/graphql/schema.graphql"
   },
   "dependencies": {
+    "@bmatei/apollo-prometheus-exporter": "^1.2.0",
     "@textile/hub": "^6.0.2",
     "apollo-server": "^2.21.0",
+    "apollo-server-express": "^2.23.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-2-json-schema": "git://github.com/phibar/graphql-to-json-schema.git#textile",
     "graphql-import-node": "^0.0.4",
-    "json-schema": "^0.3.0"
+    "json-schema": "^0.3.0",
+    "prom-client": "^13.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.3",
